@@ -15,7 +15,7 @@ Roberto Braga-- for a reliability patch to the example init.d script.
 
 Paul Makepeace-- for contributing maildir support, enhancing auth-flatfile,
 contributing scripts and useful suggestions, and getting tpop3d running on Mac
-OS X.
+OS X, and a number of bug fixes.
 
 Allan Joergensen-- for helping me find and fix a bug with the code which was
 causing problems on Linux for S/390.
